codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_interrupted.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 100)"
---
• Called cua_repl.js({"title":"Opened Chrome","code":"await cua.getState()"})
  └ ready
• Called cua_repl.js({"title":"Load the terminal","code":"await cua.getState()"})
  └ Error: interrupted
