codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_success.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 100)"
---
• Called cua_repl.js({"title":"Inspect page","code":"await cua.getState()"})
  └ A successful result with details
• Called cua_repl.js({"title":"Reload page","code":"await cua.getState()"})
  └ Loaded
